记录6月完成内容

--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -52,6 +52,8 @@
 * 3 月第 92-110 视频学习，进度完成 47%。
 * 4 月第 111-120 视频学习，进度完成 51%。
 * 5 月第 121-134 视频学习，进度完成 61%。
+* 6 月第 135-192 视频学习，进度完成 82%。
+* 7 月
 
 ## 1.4. Android
 
@@ -83,7 +85,8 @@
 * 3 月 《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
 * 4 月 《重构：改善既有代码的设计》第 3-7 章完成，第 8 章阅读，第 2 章读书笔记完成
 * 5 月 《重构：改善既有代码的设计》第 9-12 章阅读，第 8 章读书笔记完成
-* 
+* 6 月 《重构：改善既有代码的设计》第 9 章读书笔记完成
+* 7 月
 
 ## 1.6. 其他
 
@@ -92,6 +95,7 @@
 书籍：《思维导图完整手册》- 完成
   	 《指数基金投资指南》- 完成
   	 《攻守：可转债投资实用手册》
+  	 《山茶文具店》- 完成
 ```
 
 ### 1.6.1. 实施
@@ -103,6 +107,8 @@
 * 3 月 《指数基金投资指南》第 2- 8 章-阅读完毕
 
 * 4 月 《指数基金投资指南》读书笔记完成
+
+* 6 月 《山茶文具店》阅读完毕
 
   
 
@@ -127,7 +133,7 @@
 * 3 月 14 次，健身房 14 次。
 * 4 月 10 次，健身房 10 次。
 * 5 月 10 次，健身房 8 次，自行 2 次，疫情严重，没去健身房。
-* 6 月
+* 6 月 12 次，健身房 12 次。
 * 7 月
 * 8 月
 * 9 月
@@ -149,7 +155,7 @@
 * 3 月 0 张，未达标。
 * 4 月 0 张，未达标。
 * 5 月 3 张，未达标，总量完成 8%。
-* 6 月
+* 6 月 5 张，达标，总量完成 16%。
 * 7 月
 * 8 月
 * 9 月
