重构阅读完毕

--- a/plan/计划/任务库.md
+++ b/plan/计划/任务库.md
@@ -15,6 +15,7 @@
   * 《Android 全埋点解决方案》 - 已完成
   * 《重构改善既有代码的设计》豆瓣评分 9.0
   * 《UML 精粹：标准对象建模语言简明指南》 豆瓣评分 8.1
+  * 《程序设计的模式语言》
 * 其他书籍
   * 《思维导图完整手册》 - 已完成
   * 《女性呵护指南》豆瓣评分 8.2
@@ -29,7 +30,7 @@
     * 书籍：《深入理解 Kotlin 协程》
   * UI 设计
   * 架构师
-    * 视频：高焕堂-Android 编程从程序员到架构师的高手之路
+    * 视频：高焕堂-Android 编程从程序员到架构师的高手之路 - 完成
   * 音视频
   * python
   * 微信小程序
@@ -38,9 +39,15 @@
 
 * 锻炼
 * 绘画
+  * 书籍：《艺术笔记 - 和修拉一起过周末》
+  * 书籍：《艺术笔记 - 和梵高一起喝咖啡》
+  * 书籍：《艺术笔记 - 和莫奈一起去郊游》
+  * 书籍：《艺术笔记 - 和北斋一起来冲浪》
 * 练字
 * 英语
 * 理财
   * 书籍：《指数基金投资指南》 豆瓣评分 8.2 - 已完成
   * 书籍：《攻守：可转债投资实用手册》豆瓣评分 7.5
+* 其他
+  * 书籍：《山茶文具店》豆瓣评分 8.2 - 已完成
 
