--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -42,7 +42,7 @@
 
 ```java
 3. 架构 
-视频：《高焕堂-Android 编程从程序员到架构师的高手之路》- 共 234 个视频
+视频：《高焕堂-Android 编程从程序员到架构师的高手之路》- 共 234 个视频 - 完成
 ```
 
 ### 1.3.1. 实施
@@ -53,7 +53,7 @@
 * 4 月第 111-120 视频学习，进度完成 51%。
 * 5 月第 121-134 视频学习，进度完成 61%。
 * 6 月第 135-192 视频学习，进度完成 82%。
-* 7 月
+* 7 月第 193-234 视频学习，进度完成 100%。
 
 ## 1.4. Android
 
@@ -76,17 +76,17 @@
 ```java
 5. 编码
 书籍：《代码整洁之道》
-     《重构：改善既有代码的设计》
+     《重构：改善既有代码的设计》- 完成
 ```
 
 ### 1.5.1. 实施
 
-* 3 月 《代码整洁之道》 第 12-14 章完成
-* 3 月 《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
-* 4 月 《重构：改善既有代码的设计》第 3-7 章完成，第 8 章阅读，第 2 章读书笔记完成
-* 5 月 《重构：改善既有代码的设计》第 9-12 章阅读，第 8 章读书笔记完成
-* 6 月 《重构：改善既有代码的设计》第 9 章读书笔记完成
-* 7 月
+* 3 月《代码整洁之道》 第 12-14 章完成
+* 3 月《重构：改善既有代码的设计》第 1 章完成，第 2 章阅读
+* 4 月《重构：改善既有代码的设计》第 3-7 章完成，第 8 章阅读，第 2 章读书笔记完成
+* 5 月《重构：改善既有代码的设计》第 9-12 章阅读，第 8 章读书笔记完成
+* 6 月《重构：改善既有代码的设计》第 9 章读书笔记完成
+* 7 月《重构：改善既有代码的设计》第 10-15 章读书笔记完成
 
 ## 1.6. 其他
 
@@ -134,7 +134,7 @@
 * 4 月 10 次，健身房 10 次。
 * 5 月 10 次，健身房 8 次，自行 2 次，疫情严重，没去健身房。
 * 6 月 12 次，健身房 12 次。
-* 7 月
+* 7 月 3 次，
 * 8 月
 * 9 月
 * 10 月
