更新计划完成情况

--- a/plan/计划/任务库.md
+++ b/plan/计划/任务库.md
@@ -3,7 +3,7 @@
 # 1. 学习
 
 * 技术书籍
-  * 《代码整洁之道》
+  * 《代码整洁之道》- 完成
   * 《程序员修炼之道》
   * 《深入理解 Android 卷一》
   * 《 Android 进阶之光》
@@ -12,16 +12,16 @@
   * 《深入探索 Android 热修复技术原理》
   * 《 Android 插件化开发指南》
   * 《 Android 开发艺术探索 》
-  * 《Android 全埋点解决方案》 - 已完成
-  * 《重构改善既有代码的设计》豆瓣评分 9.0
+  * 《Android 全埋点解决方案》 - 完成
+  * 《重构改善既有代码的设计》豆瓣评分 9.0 - 完成
   * 《UML 精粹：标准对象建模语言简明指南》 豆瓣评分 8.1
   * 《程序设计的模式语言》
 * 其他书籍
-  * 《思维导图完整手册》 - 已完成
+  * 《思维导图完整手册》 - 完成
   * 《女性呵护指南》豆瓣评分 8.2
 * 技术栈
   * React Native
-    * 书籍：《React Native 移动开发实战》 - 已完成
+    * 书籍：《React Native 移动开发实战》 - 完成
   * Flutter
   * 组件化
   * 插件化
@@ -46,8 +46,8 @@
 * 练字
 * 英语
 * 理财
-  * 书籍：《指数基金投资指南》 豆瓣评分 8.2 - 已完成
+  * 书籍：《指数基金投资指南》 豆瓣评分 8.2 - 完成
   * 书籍：《攻守：可转债投资实用手册》豆瓣评分 7.5
 * 其他
-  * 书籍：《山茶文具店》豆瓣评分 8.2 - 已完成
+  * 书籍：《山茶文具店》豆瓣评分 8.2 - 完成
 
