--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -7,7 +7,7 @@
 ```java
 1. React Native
 * 视频
-  《React Native 视频教程-项目实战》
+  《React Native 视频教程-项目实战》- 取消
 * 书籍
   《React Native 移动开发实战》- 完成
 * 网址
@@ -17,14 +17,14 @@
 ### 1.1.1. 实施
 
 * 1 月《React Native 移动开发实战》第 4-12 章读书笔记完成。
-* 
+* 换了工作，就先不看这部分的知识了。
 
 ## 1.2. Kotlin
 
 ```java
 2. Kotlin
 * 视频
-  《黑马 2018 最新 kotlin 项目实战》
+  《黑马 2018 最新 kotlin 项目实战》 - 更换
 * 书籍
   《深入理解 Kotlin 协程》
 * 网址
@@ -36,7 +36,9 @@
 
 ### 1.2.1. 实施
 
+* kotlin 的视频学习换成码牛的移动互联网高级开发视频。
 
+  
 
 ## 1.3. 架构
 
@@ -61,6 +63,7 @@
 4. Android
 书籍：《Android 全埋点解决方案》- 完成
      《Android 进阶解密》
+视频：《移动互联网高级开发》
 ```
 
 ### 1.4.1. 实施
@@ -75,7 +78,7 @@
 
 ```java
 5. 编码
-书籍：《代码整洁之道》
+书籍：《代码整洁之道》- 完成
      《重构：改善既有代码的设计》- 完成
 ```
 
@@ -87,6 +90,8 @@
 * 5 月《重构：改善既有代码的设计》第 9-12 章阅读，第 8 章读书笔记完成
 * 6 月《重构：改善既有代码的设计》第 9 章读书笔记完成
 * 7 月《重构：改善既有代码的设计》第 10-15 章读书笔记完成
+* 7 月《代码整洁之道》阅读完成，第 15-16 章读书笔记完成
+* 8 月《代码整洁之道》第 17 章与附录笔记完成
 
 ## 1.6. 其他
 
@@ -115,7 +120,7 @@
 ## 1.7. 技术文章输出
 
 * 1月 [Android 编码规范](https://github.com/ZhangMiao147/android_learning_notes/tree/master/Android/Android编码规范)
-* 
+* 7月 Long 的 parseLong 与 valueof 的区别
 
 # 2. 生活
 
@@ -134,7 +139,7 @@
 * 4 月 10 次，健身房 10 次。
 * 5 月 10 次，健身房 8 次，自行 2 次，疫情严重，没去健身房。
 * 6 月 12 次，健身房 12 次。
-* 7 月 3 次，
+* 7 月 9 次，健身房 9 次。
 * 8 月
 * 9 月
 * 10 月
@@ -156,8 +161,10 @@
 * 4 月 0 张，未达标。
 * 5 月 3 张，未达标，总量完成 8%。
 * 6 月 5 张，达标，总量完成 16%。
-* 7 月
+* 7 月 1 张，未达标。
 * 8 月
 * 9 月
 * 10 月
+* 11 月
+* 12 月
 
