--- a/plan/计划/2021年计划.md
+++ b/plan/计划/2021年计划.md
@@ -11,7 +11,7 @@
 * 书籍
   《React Native 移动开发实战》- 完成
 * 网址
-  [Android 开发技术周报特刊之 React Native](https://www.androidweekly.io/android-dev-special-weekly-react-native-issue-0/)
+  [Android 开发技术周报特刊之 React Native](https://www.androidweekly.io/android-dev-special-weekly-react-native-issue-0/) - 取消
 ```
 
 ### 1.1.1. 实施
@@ -115,6 +115,10 @@
 
 * 6 月 《山茶文具店》阅读完毕
 
+* 《明朝那些事儿》完成
+
+* 《今天也要认真穿》完成
+
   
 
 ## 1.7. 技术文章输出
@@ -140,11 +144,11 @@
 * 5 月 10 次，健身房 8 次，自行 2 次，疫情严重，没去健身房。
 * 6 月 12 次，健身房 12 次。
 * 7 月 9 次，健身房 9 次。
-* 8 月
-* 9 月
-* 10 月
-* 11 月
-* 12 月
+* 8 月 6 次，健身房 6 次。
+* 9 月 11 次，健身房 11 次。
+* 10 月 5 次，搬家，自行 5 次。
+* 11 月 11 次，办了新的健身卡，健身房 11 次。
+* 12 月 12 次，健身房 5 次，健身房装修停课，自行 7 次。
 
 ## 2.2. 绘画
 
@@ -161,10 +165,10 @@
 * 4 月 0 张，未达标。
 * 5 月 3 张，未达标，总量完成 8%。
 * 6 月 5 张，达标，总量完成 16%。
-* 7 月 1 张，未达标。
-* 8 月
-* 9 月
-* 10 月
-* 11 月
-* 12 月
+* 7 月 1 张，未达标，总量完成 18%。
+* 8 月 0 张，未达标
+* 9 月 0 张，未达标
+* 10 月 0 张，未达标
+* 11 月 0 张，未达标
+* 12 月 0 张，未达标
 
