--- a/plan/计划/任务库.md
+++ b/plan/计划/任务库.md
@@ -34,6 +34,9 @@
   * 音视频
   * python
   * 微信小程序
+* Unity
+  * 教程
+    * https://zhuanlan.zhihu.com/p/151238164 [教程汇总+持续更新]Unity从入门到入坟——收藏这一篇就够了
 
 # 2. 生活
 
