动脑学院kotlin学习笔记

--- a/Kotlin/动脑学习笔记/动脑学习笔记37-59.md
+++ b/Kotlin/动脑学习笔记/动脑学习笔记37-59.md
@@ -358,5 +358,205 @@ fun main() {
 }
 ```
 
-## Double 转 Int 与类型格式化
+## 51. Double 转 Int 与类型格式化
 
+### Double 转 Int
+
+* 精度损失与四舍五入
+
+### Double 类型格式化
+
+* 格式化字符串时一串特殊字符，它决定改如何格式化数据
+
+```kotlin
+import kotlin.math.roundToInt
+
+fun main() {
+
+   println(8.956756.toInt())// 8
+    println(8.956756.roundToInt())// 9，四舍五入
+
+    val s = "%.2f".format(8.956756)// double 精度化二位，格式化字符
+    println(s)//8.96
+}
+```
+
+## 52.apply
+
+* apply 函数可看作一个配置函数，你可以传入一个接收者，然后调用一系列函数来配置它以便使用，如果提供 lambda 给 apply 函数执行，它会返回配置好的接受者。
+
+* 可以看到，调用一个个函数类配置接收者时，变量名就省掉了，这是因为，在 lambda 表达式里，apply 能让每个配置函数都作用于接受者，这种行为有时又叫做相关作用域，因为 lambda 表达式里的所有函数调用都是针对接收者的，或者说，它们是针对接收者的隐式调用。
+
+```kotlin
+import java.io.File
+
+fun main() {
+    val file1 = File("E://i hava a dream_copy.txt")
+    file1.setReadable(true)
+    file1.setWritable(true)
+    file1.setExecutable(false)
+
+    // 使用 apply
+    val file2 = File("E://i hava a dream_copy.txt").apply {
+        setReadable(true)
+        setWritable(true)
+        setExecutable(false)
+    }
+}
+```
+
+## 53. let
+
+* let 函数能使某个变量作用于其 lambda 表达式里，让 it 关键字能引用它。let 与 apply 比较，let 会把接收者传给 lambda，而 apply 什么都不传，匿名函数执行完，apply 会返回当前接收者，而 let 会返回 lambda 的最后一行。
+
+```kotlin
+fun main() {
+    val result = listOf(3,2,1).first().let {
+        it*it
+    }
+    println(result) // 9
+
+    // 不用 let
+    val firstElement = listOf(3,2,1).first()
+    val res = firstElement * firstElement
+    println(res) // 9
+
+    println(formatGreeting(null)) // What's your name?
+    println(formatGreeting("Jack")) // Welcome,Jack.
+
+    println(formatGreeting2(null)) // What's your name?
+    println(formatGreeting2("Jack")) // Welcome,Jack.
+}
+
+fun formatGreeting(guestName:String?):String {
+    return guestName?.let {
+        "Welcome,$it."
+    }?:"What's your name?"
+}
+
+// 不使用 let 写法
+fun formatGreeting2(guestName:String?):String {
+    return if(guestName != null){
+        "Welcome,$guestName."
+    } else {
+        "What's your name?"
+    }
+}
+```
+
+## 54. run
+
+* 光看作用域行为，run 和 apply 差不多，但与 apply 不同，run 函数不返回接收者，run 返回的是 lambda 结果，也就是 true 或者 false。
+
+```kotlin
+import java.io.File
+
+fun main() {
+    val file = File("E://i hava a dream_copy.txt")
+    val result = file.run {
+        readText().contains("great")
+    }
+    println(result) // true
+}
+```
+
+* run 也能用来执行函数引用
+
+```kotlin
+fun main() {
+    val result2 = "The People's Republic of china.".run(::isLong)
+    println(result2) // true
+
+    "The People's Republic of china."
+        .run(::isLong)
+        .run(::showMessage)
+        .run(::println) // Name is too long.
+}
+
+fun isLong(name:String) = name.length >= 10
+
+fun showMessage(isLong:Boolean):String{
+    return if(isLong){
+        "Name is too long."
+    } else {
+        "Please rename."
+    }
+}
+```
+
+## 55. with
+
+* With 函数是 run 的变体，他们的功能行为是一样的，但 with 的调用方式不同，调用 with 时需要值参作为其第一个参数传入。
+
+```kotlin
+fun main() {
+    // run 写法
+    val result1 = "The People's Republic of china.".run {
+        length >= 10
+    }
+    println(result1) // true
+    // with 写法
+    val result2 =with("The People's Republic of china."){
+        length >= 10
+    }
+    println(result2) // true
+}
+```
+
+## 56. also
+
+* also 函数和 let 函数功能相似，和 let 一样，also 也是把接收者作为值参传给 lambda，但有一点不同：also 返回接收者对象，而 let 返回 lambda 结果。因为这个差异，alse 尤其适合针对同一原始对象，利用副作用做事，既然 also 返回的是接收者对象，你就可以基于原始接收者对象执行额外的链式调用。
+
+```kotlin
+import java.io.File
+
+fun main() {
+    var fileContents:List<String>
+    val file:File = File("E://i hava a dream_copy.txt")
+        .also {
+            println(it.name) // i hava a dream_copy.txt
+        }
+        .also {
+            fileContents = it.readLines()
+        }
+
+    println(fileContents) // 打印的字符串的集合
+}
+```
+
+
+
+## 57. takeIf
+
+* 和其他标准函数有点不一样，takeIf 函数需要判断 lambda 中提供的条件表达式，给出 true 或 false 结果，如果判断结果是 true，从 takeIf 函数返回接收者对象，如果是 flase，则返回 null。如果需要判断某个条件是否满足，再决定是否可以赋值变量或执行某项任务，takeIf 就非常有用，概念上讲，takeIf 函数类似于 if 语句，但它的优势是可以直接在对象实例上调用，避免了临时变量赋值的麻烦。
+
+```kotlin
+import java.io.File
+
+fun main() {
+    val result = File("E://i hava a dream_copy.txt")
+        .takeIf { it.exists() && it.canRead() }
+        ?.readText()
+
+    println(result) // 无文件，为null，有文件为文件内容
+}
+```
+
+## 58. takeUnless
+
+* takeIf 辅助函数 takeUnless，只有判断你给定的条件结果是 false 时，takeUnless 才会返回原始接收者对象。
+
+```kotlin
+import java.io.File
+
+fun main() {
+
+    val result = File("E://i hava a dream_copy.txt")
+        .takeUnless { it.isHidden}// 文件不可见为 false，则返回文件对象
+        ?.readText()
+
+    println(result) // 文件可见，返回文件内容
+}
+```
+
+## 59. 小节回顾
