--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -20,7 +20,7 @@
 ```
 * 视频
 
-  * 码牛-移动互联网高级开发正式课视频-kotlin
+  * https://www.bilibili.com/video/BV1wf4y1s7TG?p=12&spm_id_from=pageDriver  动脑学院-kotiln
 
 * 书籍
 
@@ -29,7 +29,8 @@
 
 #### 实施
 
-
+* 202201 - 动脑学院 kotlin 视频学习 70/148，完成 47%
+* 202202 - 动脑学院 kotlin 视频学习 141/148，完成 95%
 
 ### 1.3. Unity
 
@@ -37,11 +38,12 @@
 * 教程
 
 	* https://zhuanlan.zhihu.com/p/151238164 [教程汇总+持续更新]Unity从入门到入坟——收藏这一篇就够了
+	* 视频：Unity 快速入门 https://www.imooc.com/learn/313 - 完成
 ```
 
 #### 实施
 
-
+* Unity 快速入门 https://www.imooc.com/learn/313 学习完毕
 
 ### 1.4. 其他
 
@@ -53,7 +55,10 @@
 
 #### 实施
 
-
+* 202201 - 《高效能人士的七个习惯》第三章
+* 202201 - 《生活蒙太奇》
+* 202202 - 《和修拉一起过周末》
+* 202202 - 《高效能人士的七个习惯》第四-五章。
 
 ### 1.5. 教师证
 
@@ -79,7 +84,9 @@
 
 #### 实施
 
-
+* 202201- 5 次
+* 202202 - 8 次
+* 
 
 ### 2.2. 绘画
 
@@ -90,7 +97,8 @@
 
 #### 实施
 
-
+* 202201 - 0 张，写了 1 张字帖
+* 202202 - 0 张
 
 
 
