--- a/plan/计划/2022年计划.md
+++ b/plan/计划/2022年计划.md
@@ -1,4 +1,4 @@
-# 2021 年计划
+# 2022 年计划
 
 ## 1. 学习
 
@@ -20,7 +20,7 @@
 ```
 * 视频
 
-  * https://www.bilibili.com/video/BV1wf4y1s7TG?p=12&spm_id_from=pageDriver  动脑学院-kotiln
+  * https://www.bilibili.com/video/BV1wf4y1s7TG?p=12&spm_id_from=pageDriver  动脑学院-kotiln - 完成
 
 * 书籍
 
@@ -31,8 +31,9 @@
 
 * 202201 - 动脑学院 kotlin 视频学习 70/148，完成 47%
 * 202202 - 动脑学院 kotlin 视频学习 141/148，完成 95%
+* 202204 - 动脑学院 kotlin 视频学习 148/148，完成 100%
 
-### 1.3. Unity
+### 1.3. Unity - 暂停
 
 ```
 * 教程
@@ -44,6 +45,8 @@
 #### 实施
 
 * Unity 快速入门 https://www.imooc.com/learn/313 学习完毕
+
+工作中项目暂停，所以 unity 不需要再继续学习下去了。改为学习 flutter。
 
 ### 1.4. 其他
 
@@ -73,6 +76,19 @@
 
 
 
+### 1.6. Flutter
+
+```
+* 教程
+	* https://book.flutterchina.club/ 《Flutter实战·第二版》
+```
+
+#### 实施
+
+* 202202-《Flutter实战·第二版》第一章，第二章 2.1-2.2
+
+
+
 ## 2. 生活
 
 ### 2.1. 锻炼
@@ -86,7 +102,7 @@
 
 * 202201- 5 次
 * 202202 - 8 次
-* 
+* 202203 - 8 次
 
 ### 2.2. 绘画
 
@@ -99,6 +115,7 @@
 
 * 202201 - 0 张，写了 1 张字帖
 * 202202 - 0 张
+* 202203 - 0 张，写了 2 张字帖
 
 
 
