--- a/system/死锁.md
+++ b/system/死锁.md
@@ -85,7 +85,7 @@
 
 ### 7.1. 破坏互斥条件
 
-　　例如假设打印技术允许若干个进程同时输出，唯一真正请求物理打印机的进程是打印守护进程。
+　　例如打印技术允许若干个进程同时输出，唯一真正请求物理打印机的进程是打印守护进程。
 
 ### 7.2. 破坏占有和等待条件
 
