--- a/system/进程与线程.md
+++ b/system/进程与线程.md
@@ -338,7 +338,7 @@
 
 ### 7.5. 共享存储
 
-　　允许多个进程共享一个给定的存储区。因为数据不需要再进程之间复制，所以这是最快的一种 IPC。
+　　允许多个进程共享一个给定的存储区。因为数据不需要在进程之间复制，所以这是最快的一种 IPC。
 
 　　需要使用信号量来同步对共享存储的访问。
 
