--- a/Java/线程/同步的知识.md
+++ b/Java/线程/同步的知识.md
@@ -1,6 +1,6 @@
 # 同步的知识
 
-## 1 内存模型的相关概念
+## 1. 内存模型的相关概念
 
 　　计算机在执行程序时，每条指令都是在 CPU 中执行的，而执行指令过程中，势必涉及到数据的读写和写入。
 
@@ -26,9 +26,9 @@
 
 　　这两种方式都是硬件层面上提供的方式。
 
-## 2 并发编程中的三个概念
+## 2. 并发编程中的三个概念
 
-### 2.1 原子性
+### 2.1. 原子性
 
 　　原子性：即一个操作或者多个操作要么全部执行并且执行的过程不会被任何因素打断，要不就都不执行。
 
@@ -52,7 +52,7 @@
 
 　　要想并发程序正确地执行，必须要保证原子性、可见性以及有序性。要是有一个没有被保证，就有可能会导致程序运行不正确。
 
-## 3 Java 内存模型（JMM）
+## 3. Java 内存模型（JMM）
 
 　　在 Java 虚拟机规范中试图定义一种 Java 内存模型（Java Memory Model，JMM）来屏蔽各个硬件平台和操作系统的内存访问差异，以实现让 Java 程序在各个平台下都能达到一致的内存访问效果。
 
@@ -60,9 +60,9 @@
 
 　　注意，为了获得较好的执行性能，Java 内存模型并没有限制执行引擎使用处理器的寄存器或者高速缓存来提升指令执行速度，也没有限制编译器对指令进行重排序。也就是说，在 java 内存模型中，也会存在缓存一致性问题和指令重排序的问题。
 
-## 4 Java 语言本身对原子性、一致性以及有序性提供的保证
+## 4. Java 语言本身对原子性、一致性以及有序性提供的保证
 
-### 4.1 原子性
+### 4.1. 原子性
 
 　　Java 中的原子性操作包括：
 
@@ -72,7 +72,7 @@
 
 　　Java 内存模型只保证了上面的操作是原子性操作，如果要实现更大范围的原子性，可以通过 synchronized 和 Lock 来实现。由于 synchronized 和 Lock 能够保证任一时刻只有一个线程执行该代码块，那么自然就不存在原子性问题了，从而保证了原子性。 
 
-### 4.2 可见性
+### 4.2. 可见性
 
 　　在多线程环境中，一个线程对共享变量的操作对其他线程是不可见的。Java 提供了 volatile 关键字来保证可见性。
 
@@ -82,7 +82,7 @@
 
 　　另外，通过 synchronized 和 Lock 也能够保证可见性，synchronized 和 Lock 能保证同一时刻只有一个线程获取锁然后执行同步代码，并且在释放锁之前会将变量的修改刷新到主内存中，因此可以保证可见性。 final 也是保证可见性的。
 
-### 4.3 有序性
+### 4.3. 有序性
 
  　　在 Java 内存模型中，允许编译器和处理器对指令进行重排序，但是重排序过程不会影响到单线程程序的执行，却会影响到多线程并发执行的正确性。
 
@@ -101,7 +101,7 @@
 * 线程终结规则：线程中所有的操作都先行发生于线程的终止检测，可以通过 Thread.join() 方法结束、Thread.isAlive() 的返回值手段检测到线程已经终止执行。
 * 对象终结规则：一个对象的初始化完成先行发生于它的 finalize() 方法的开始。
 
-## 5 锁的互斥与可见性
+## 5. 锁的互斥与可见性
 
 　　锁提供了两种主要特性：**互斥**（mutual exclusion）和**可见性**（visibility）。
 
@@ -111,7 +111,7 @@
 
    如果没有同步机制提供的这种可见性保证，线程看到的共享变量可能是修改前的值或不一致的值，这将引发许多严重问题。
 
-## 6 参考文章
+## 6. 参考文章
 
 [java并发编程：volatile 关键字解析](https://www.cnblogs.com/dolphin0520/p/3920373.html)
 
